--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,15 +1,16 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 .flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
 h6.error-text {
     display: none;
     font-weight: normal;
@@ -18,50 +19,109 @@ h6.error-text {
     margin-top: 4px;
     color: #f94040;
 }
+
 .route-text {
-      
     a {
         text-decoration: none;
-      font-size: 30px;
-      color: #000;
-      font-weight: 600;
-      display: inline-block;
-      margin-bottom: 30px;
-      span{
-          color: #6a2fe3;
-      }
+        font-size: 30px;
+        color: #000;
+        font-weight: 600;
+        display: inline-block;
+        margin-bottom: 30px;
+        span {
+            color: #6a2fe3;
+        }
     }
-  }
+}
+
 div.form-error {
-  input {
-    border: 1px solid #f94040 !important;
-  }
-  h6.error-text {
-    display: block !important;
-  }
+    input {
+        border: 1px solid #f94040 !important;
+    }
+    h6.error-text {
+        display: block !important;
+    }
 }
+
 .flexend {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
+
 .flexstart {
-  display: flex;
-  justify-content: flex-start;
+    display: flex;
+    justify-content: flex-start;
 }
+
 ul {
-  list-style: none;
+    list-style: none;
 }
+
 button {
-  cursor: pointer;
-  border: 0;
-  background: transparent;
+    cursor: pointer;
+    border: 0;
+    background: transparent;
 }
 
 .container {
-  width: 1140px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+    width: 1140px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.card-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px -15px;
+}
+
+.item-2,
+.item-3,
+.item-4,
+.item-5,
+.item-7,
+.item-6,
+.item-8,
+.item-9,
+.item-10 {
+    padding: 0px 15px;
+}
+
+.item-2 {
+    width: calc(100% / 6);
+}
+
+.item-3 {
+    width: 25%;
+}
+
+.item-4 {
+    width: calc(100% / 3);
+}
+
+.item-5 {
+    width: calc((100% / 12) * 5);
+}
+
+.item-7 {
+    width: calc((100% / 12) * 7);
+}
+
+.item-8 {
+    width: calc((100% / 3) * 2);
+}
+
+.item-6 {
+    width: 50%;
+}
+
+.item-9 {
+    width: 75%;
+}
+
+.item-10 {
+    width: calc((100% / 6) * 5);
 }
