--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -65,7 +65,7 @@ button {
 }
 
 .container {
-    width: 1140px;
+    max-width: 1140px;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -124,4 +124,34 @@ button {
 
 .item-10 {
     width: calc((100% / 6) * 5);
+}
+
+@media (min-width: 768px) {
+    .item-md-2 {
+        width: calc(100% / 6);
+    }
+    .item-md-3 {
+        width: 25%;
+    }
+    .item-md-4 {
+        width: calc(100% / 3);
+    }
+    .item-md-5 {
+        width: calc((100% / 12) * 5);
+    }
+    .item-md-7 {
+        width: calc((100% / 12) * 7);
+    }
+    .item-md-8 {
+        width: calc((100% / 3) * 2);
+    }
+    .item-md-6 {
+        width: 50%;
+    }
+    .item-md-9 {
+        width: 75%;
+    }
+    .item-md-10 {
+        width: calc((100% / 6) * 5);
+    }
 }
